--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,11 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.capitalize:first-letter {
+  text-transform: uppercase;
+}
+
+.md-top-buffer {
+  margin-top: 3rem !important;
+}
